started the fx11 build script